--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">TodoWithSpot</string>
+    <string name="success_login">로그인 성공</string>
+    <string name="failed_login">로그인 실패</string>
+    <string name="success_logout">로그아웃 성공</string>
+    <string name="already_login">이미 로그인 되어있습니다.</string>
 </resources>
