style : today-view.xml 재정렬,  String value 정리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="context">내용</string>
     <string name="submit">완료</string>
     <string name="place">장소</string>
+    <string name="todayTitle">Today</string>
 
 </resources>
