feat: AllActivity RecyclerView 데이터 연결

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="submit">완료</string>
     <string name="place">장소</string>
     <string name="todayTitle">Today</string>
+    <string name="allTitle">All</string>
 
 </resources>
