--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,9 @@
     <string name="place">장소</string>
     <string name="todayTitle">Today</string>
     <string name="allTitle">All</string>
+    <string name="unable_get_location_information">위치정보를 가져올 수 없습니다.</string>
+    <string name="check_location_permission">location permission, GPS 활성 여부를 확인하세요.</string>
+    <string name="explain_location_permission_need">장소에 따른 알람 서비스를 이용하려면 위치 접근 권한이 필요합니다.</string>
+    <string name="check">확인</string>
 
 </resources>
