feat : create-button 클릭 시, 데이터생성 (place 제외) / fix: 데이터 저장 안되는 이슈

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
     <string name="place">장소</string>
     <string name="todayTitle">Today</string>
     <string name="allTitle">All</string>
-
+    <string name="fill_this_text_field">일정을 작성해주세요</string>
 </resources>
