--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="explain_location_permission_need">장소에 따른 알람 서비스를 이용하려면 위치 접근 권한이 필요합니다.</string>
     <string name="check">확인</string>
     <string name="geocoder_error">GPS -> address 변환 에러</string>
-    <string name="no_address">주소 없음</string>
+    <string name="no_address">설정된 주소 없음</string>
     <string name="title_on_location_service">위치 서비스 활성화</string>
     <string name="text_on_location_service">장소에 따른 알람 서비스를 이용하려면 위치 서비스가 필요합니다.</string>
     <string name="setting">설정</string>
